--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "postcss": "^8.5.6",
