--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.28.0",
     "brapi": "^1.0.1",
     "chart.js": "^4.5.1",
     "lucide-react": "^0.548.0",
